--- a/uwthesis.bib
+++ b/uwthesis.bib
@@ -2170,3 +2170,61 @@ title = {Subgradient Methods},
 volume = {2004},
 journal = {lecture notes of EE392o, Stanford University, Autumn Quarter}
 }
+
+@article{DBLP:journals/corr/Ruder16,
+  author    = {Sebastian Ruder},
+  title     = {An overview of gradient descent optimization algorithms},
+  journal   = {CoRR},
+  volume    = {abs/1609.04747},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1609.04747},
+  archivePrefix = {arXiv},
+  eprint    = {1609.04747},
+  timestamp = {Mon, 13 Aug 2018 16:48:10 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/Ruder16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{AIResear61:online,
+author = {},
+title = {AI Research \& Development | NVIDIA DGX Systems},
+howpublished = {\url{https://www.nvidia.com/en-us/data-center/dgx-systems/}},
+month = {},
+year = {},
+note = {(Accessed on 02/05/2020)}
+}
+
+@misc{wang2019blink,
+    title={Blink: Fast and Generic Collectives for Distributed ML},
+    author={Guanhua Wang and Shivaram Venkataraman and Amar Phanishayee and Jorgen Thelin and Nikhil Devanur and Ion Stoica},
+    year={2019},
+    eprint={1910.04940},
+    archivePrefix={arXiv},
+    primaryClass={cs.DC}
+}
+
+@ARTICLE{topoawarempi,
+author={Y. {Gong} and B. {He} and J. {Zhong}},
+journal={IEEE Transactions on Parallel and Distributed Systems},
+title={Network Performance Aware MPI Collective Communication Operations in the Cloud},
+year={2015},
+volume={26},
+number={11},
+pages={3079-3089},
+keywords={application program interfaces;cloud computing;conjugate gradient methods;graph theory;message passing;network theory (graphs);optimisation;network performance aware algorithm;message passing interface;MPI;collective communication operation;cloud computing environment;network topology awareness;performance optimization;N-body;conjugate gradient;CG;Network topology;Virtual machining;Bandwidth;Topology;Optimization;Cloud computing;Hardware;Cloud computing;MPI;collective operations;network performance optimizations},
+doi={10.1109/TPDS.2013.96},
+ISSN={2161-9883},
+month={Nov},}
+
+@INPROCEEDINGS{cool,
+author={M. {Alfatafta} and Z. {AlSader} and S. {Al-Kiswany}},
+booktitle={2018 IEEE 11th International Conference on Cloud Computing (CLOUD)},
+title={COOL: A Cloud-Optimized Structure for MPI Collective Operations},
+year={2018},
+volume={},
+number={},
+pages={746-753},
+keywords={application program interfaces;cloud computing;computer centres;message passing;software defined networking;software-defined networking capabilities;network overhead;network load;intensive collective operations;optimal network paths;cross-rack communication;intra-rack network;system design;generic structure;MPI collective operations;cloud-optimized structure;COOL;Data centers;Network topology;Cloud computing;Bandwidth;Scalability;Supercomputers;MPI;collective operations;communication patterns;cloud;software-defined networking},
+doi={10.1109/CLOUD.2018.00102},
+ISSN={2159-6190},
+month={July},}
