--- a/uwthesis.tex
+++ b/uwthesis.tex
@@ -193,6 +193,7 @@ Special thanks to Novak Djokovic, we may never meet, but you bring the inspirati
 
 \input{introduction.tex}
 \input{background.tex}
+\input{PBox}
 \bibliographystyle{plain}
 \bibliography{uwthesis}
 
