--- a/uwthesis.bib
+++ b/uwthesis.bib
@@ -2228,3 +2228,20 @@ keywords={application program interfaces;cloud computing;computer centres;messag
 doi={10.1109/CLOUD.2018.00102},
 ISSN={2159-6190},
 month={July},}
+
+@inproceedings{10.1145/3341301.3359642,
+author = {Peng, Yanghua and Zhu, Yibo and Chen, Yangrui and Bao, Yixin and Yi, Bairen and Lan, Chang and Wu, Chuan and Guo, Chuanxiong},
+title = {A Generic Communication Scheduler for Distributed DNN Training Acceleration},
+year = {2019},
+isbn = {9781450368735},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3341301.3359642},
+doi = {10.1145/3341301.3359642},
+booktitle = {Proceedings of the 27th ACM Symposium on Operating Systems Principles},
+pages = {16–29},
+numpages = {14},
+keywords = {ML frameworks, communication scheduling},
+location = {Huntsville, Ontario, Canada},
+series = {SOSP ’19}
+}
