--- a/uwthesis.tex
+++ b/uwthesis.tex
@@ -193,7 +193,8 @@ Special thanks to Novak Djokovic, we may never meet, but you bring the inspirati
 
 \input{introduction.tex}
 \input{background.tex}
-\input{PBox}
+\input{PBox.tex}
+\input{PHub.tex}
 \bibliographystyle{plain}
 \bibliography{uwthesis}
 
