--- a/uwthesis.bib
+++ b/uwthesis.bib
@@ -1593,7 +1593,7 @@ note = {(Accessed on 12/20/2018)}
 @misc{NetlinkW13:online,
 author = {},
 title = {Netlink Wikipedia},
-howpublished = {https://en.wikipedia.org/wiki/Netlink##cite_note-4},
+howpublished = {\url{https://en.wikipedia.org/wiki/Netlink##cite_note-4}},
 month = {},
 year = {},
 note = {(Accessed on 12/22/2018)}
@@ -2244,4 +2244,22 @@ numpages = {14},
 keywords = {ML frameworks, communication scheduling},
 location = {Huntsville, Ontario, Canada},
 series = {SOSP ’19}
+}
+
+@misc{HomeDPDK74:online,
+	author = {dpdk},
+	title = {Home - DPDK},
+	howpublished = {\url{https://www.dpdk.org/}},
+	month = {},
+	year = {},
+	note = {(Accessed on 09/01/2019)}
+}
+
+@misc{iPerfThe0:online,
+	author = {iperf},
+	title = {iPerf - The TCP, UDP and SCTP network bandwidth measurement tool},
+	howpublished = {\url{https://iperf.fr/}},
+	month = {},
+	year = {},
+	note = {(Accessed on 09/01/2019)}
 }
