--- a/uwthesis.tex
+++ b/uwthesis.tex
@@ -83,6 +83,8 @@
      \def\}{\ttfamily\char`\}}}
   {\end{alltt}}
  
+\definecolor{azureC}{RGB}{32,117,184}
+\definecolor{ec2C}{RGB}{246,133,54}
  \newcommand{\pbox}{Parameter Box\xspace}
  \newcommand{\phub}{Parameter Hub\xspace}
  \newcommand{\plink}{Parameter Link\xspace}
@@ -195,6 +197,7 @@ Special thanks to Novak Djokovic, we may never meet, but you bring the inspirati
 \input{background.tex}
 \input{PBox.tex}
 \input{PHub.tex}
+\input{PLink.tex}
 \bibliographystyle{plain}
 \bibliography{uwthesis}
 
